Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/SalesIQ__Position_Account__c.object
<CustomObject>
    <description>Junction object between Position and Account</description>
    <fields>
        <fullName>SalesIQ__AccVisible__c</fullName>
        <formula>IF(( $UserRole.Name == SalesIQ__Position__r.SalesIQ__Territory__r.SalesIQ__District__c  )||($UserRole.Name == SalesIQ__Position__r.SalesIQ__Territory__r.SalesIQ__Region__c  )||($UserRole.Name ==  SalesIQ__Position__r.SalesIQ__Territory__r.SalesIQ__Division__c ) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Position Account</relationshipLabel>
        <relationshipName>Position_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>SalesIQ__Position__c</referenceTo>
        <relationshipLabel>Position Account</relationshipLabel>
        <relationshipName>Position_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <label>Position Account</label>
    <listViews>
        <fullName>SalesIQ__All</fullName>
        <columns>NAME</columns>
        <columns>SalesIQ__Account__c</columns>
        <columns>SalesIQ__Reviewed__c</columns>
        <columns>SalesIQ__Position__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>Position Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Position Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>